--- a/roulette.css
+++ b/roulette.css
@@ -40,14 +40,18 @@
   transform-origin: 100% 100%;
   transform: rotate(var(--rotation));
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 0);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.2rem;
+}
+
+.roulette-section-text {
+  display: block;
+  position: absolute;
+  top: 60%;
+  left: 25%;
+  transform: rotate(-45deg);
+  font-size: 1.1rem;
   color: #fff;
   font-weight: bold;
-  text-align: center;
-  padding-right: 50px;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
 }
 
 .roulette-pointer {
