--- a/roulette.css
+++ b/roulette.css
@@ -45,13 +45,16 @@
 .roulette-section-text {
   display: block;
   position: absolute;
-  top: 60%;
-  left: 25%;
-  transform: rotate(-45deg);
+  width: 100%;
+  top: 40%;
+  left: 50%;
+  transform-origin: center center;
+  transform: translateX(-50%) rotate(-90deg);
   font-size: 1.1rem;
   color: #fff;
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+  text-align: center;
 }
 
 .roulette-pointer {
