--- a/roulette.css
+++ b/roulette.css
@@ -45,16 +45,15 @@
 .roulette-section-text {
   display: block;
   position: absolute;
-  width: 100%;
-  top: 40%;
+  top: 50%;
   left: 50%;
-  transform-origin: center center;
-  transform: translateX(-50%) rotate(-90deg);
+  transform-origin: 0 0;
+  transform: rotate(var(--text-rotation));
   font-size: 1.1rem;
   color: #fff;
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-  text-align: center;
+  padding-left: 10px; /* Separation from center */
 }
 
 .roulette-pointer {
