--- a/roulette.css
+++ b/roulette.css
@@ -32,6 +32,14 @@
   transition: transform 4s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
+.roulette-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .roulette-section {
   position: absolute;
   width: 50%;
@@ -42,18 +50,12 @@
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 0);
 }
 
-.roulette-section-text {
-  display: block;
+.roulette-text {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform-origin: 0 0;
-  transform: rotate(var(--text-rotation));
   font-size: 1.1rem;
   color: #fff;
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-  padding-left: 5px; /* Separation from center */
 }
 
 .roulette-pointer {
