--- a/roulette.css
+++ b/roulette.css
@@ -1,12 +1,11 @@
 .roulette-container {
-  display: none; /* Hidden by default */
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.75);
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -40,6 +39,7 @@
     #3498db 270deg       315deg,
     #9b59b6 315deg       360deg
   );
+  transition: transform 4.3s cubic-bezier(.17,.67,.17,1);
 }
 
 #rouletteTextLayer {
