--- a/roulette.css
+++ b/roulette.css
@@ -45,7 +45,7 @@
 /* Puntero de la ruleta */
 .roulette-pointer {
   position: absolute;
-  top: 100px; /* Ajustado para tener en cuenta el header */
+  top: -10px;
   left: 50%;
   transform: translateX(-50%);
   width: 0;
