--- a/roulette.css
+++ b/roulette.css
@@ -58,6 +58,7 @@
   transform-origin: center;
   pointer-events: none;
   z-index: 2;
+  text-align: center;
 }
 
 /* Flecha indicadora - única y bien posicionada */
