Politica de privacidad

--- a/style.css
+++ b/style.css
@@ -455,7 +455,7 @@ body {
 }
 
 .privacy-policy-group label a {
-  color: #ffd700;
+  color: #ccc;
   text-decoration: underline;
   cursor: pointer;
 }
